--- a/css/custom.css
+++ b/css/custom.css
@@ -1,1 +1,159 @@
-/**font-family: 'Ubuntu', sans-serif;
+
+
+body{
+	
+	
+	top:0;
+}
+
+.navbar-brand {
+
+    margin-left: 40px;
+    font-family: "Ubuntu", sans-serif;
+    font-size:2em;
+    font-weight:bold;
+	margin-right:50px;
+	margin-right:300px;
+	
+    
+    
+    
+    }
+	
+.navbar-toggler {
+	
+	
+	
+	padding:14px 8px;
+	
+	
+}
+	
+	
+	
+.navbar-toggler span{
+	
+	display:block;
+	width:22px;
+	height:2px;
+	border:1px;
+	background:orange;
+	
+}
+.navbar-toggler span + span {
+	
+	
+	margin-top:5px;
+	width:18px;
+	margin-left:4px;
+	
+	
+}
+.navbar-toggler span + span + span {
+	
+	margin-top:5px;
+	width:18px;
+	margin-left:7px;
+	
+}
+
+.navbar-expand-lg .navbar-nav .nav-link{
+	
+	
+	margin-right:50px;
+	
+	position: relative;
+	
+}
+.navbar-expand-lg .navbar-nav .nav-link:hover{
+	
+	border-top: 4px solid #e74c3c;
+	
+}
+.navbar-expand-lg .navbar-nav .nav-link .active{
+	
+border-top: 4px solid #e74c3c;
+color:#e74c3c;
+}
+
+
+/*----------------- SLIDER -------------------*/
+
+.carousel-item{
+	
+	height:100vh;
+	min-height:300px;
+	background:no-repeat scroll center scroll;
+	background-size:cover;
+}
+
+.carousel-item:before{
+	
+	
+	content:"";
+	display:block;
+	position:absoulte;
+	top:0;
+	left:0;
+	bottom:0;
+	right:0;
+	background:#000;
+	opacity:0.7;
+	
+}
+
+.carousel-caption{
+	
+	
+	bottom:180px;
+	padding-left:100px;
+	padding-right:100px;
+	
+}
+
+.carousel-caption h5{
+	
+	font-size:40px;
+	font-weight:700;
+	
+}
+
+.carousel-caption p{
+	
+	
+	font-size:18px;
+	top:2rem;
+	
+}
+
+.slider-btn {
+	
+	margin-top:30px;
+	
+}
+
+.slider-btn .btn  {
+	
+	
+	background-color:#e74c3c;
+	color:#ffffff;
+	border-radius:10px;
+	padding:5 2 rem;
+	font-size:1 rem;
+	margin-right:20px;
+	
+}
+
+/*------------SLIDER END HERE-------------------*/
+	
+	
+
+	
+	
+	
+	
+
+	
+    
+    
+    
