--- a/css/custom.css
+++ b/css/custom.css
@@ -20,44 +20,13 @@ body{
     
     }
 	
-.navbar-toggler {
-	
-	
-	
-	padding:14px 8px;
-	
-	
-}
-	
-	
-	
-.navbar-toggler span{
-	
-	display:block;
-	width:22px;
-	height:2px;
-	border:1px;
-	background:orange;
-	
-}
-.navbar-toggler span + span {
-	
-	
-	margin-top:5px;
-	width:18px;
-	margin-left:4px;
-	
-	
-}
-.navbar-toggler span + span + span {
-	
-	margin-top:5px;
-	width:18px;
-	margin-left:7px;
-	
-}
 
-.navbar-expand-lg .navbar-nav .nav-link{
+	
+	
+	
+
+
+.navbar .nav-link{
 	
 	
 	margin-right:50px;
@@ -65,14 +34,14 @@ body{
 	position: relative;
 	
 }
-.navbar-expand-lg .navbar-nav .nav-link:hover{
+.navbar .nav-link:hover{
 	
-	border-top: 4px solid #e74c3c;
+	border-bottom: 4px solid #e74c3c;
 	
 }
-.navbar-expand-lg .navbar-nav .nav-link .active{
+.navbar .nav-link .active{
 	
-border-top: 4px solid #e74c3c;
+border-bottom: 4px solid #e74c3c;
 color:#e74c3c;
 }
 
@@ -81,8 +50,7 @@ color:#e74c3c;
 
 .carousel-item{
 	
-	height:100vh;
-	min-height:300px;
+
 	background:no-repeat scroll center scroll;
 	background-size:cover;
 }
